Add workaround for issue with jnr-posix on Java 9 and above.
See https://github.com/jnr/jnr-posix/issues/110 for details.